@@ -8,6 +8,7 @@
    over now-playing.
 5. Add 'Appearances (Band/Orchestra)' and 'Appearances (Conductor)' where
    appropriate.
+6. Ignore swipes if target is scrollable in swiped axis.
 
 4.1.1
 -----
